--- a/src/components/UserBlock/UserBlock.less
+++ b/src/components/UserBlock/UserBlock.less
@@ -2,6 +2,7 @@
 
 .root {
   height: 100%;
+  padding-right: @space;
 }
 
 .inner,
@@ -17,5 +18,13 @@
     flex-direction: column;
     padding-left: @space;
     line-height: 20px;
+  }
+}
+.inner {
+  min-width: 68px;
+  cursor: pointer;
+  transition: @transition;
+  &:hover {
+    background-color: @light-color;
   }
 }
