--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -3,6 +3,10 @@
 #root {
   min-height: 100%;
 }
+img {
+  display: block;
+  width: 100%;
+}
 
 .ant-table-pagination.ant-pagination {
   padding: 0 24px;
@@ -30,4 +34,8 @@
   .ant-menu-item:first-child {
     margin-top: 0;
   }
+}
+
+#logo {
+  margin-top: 16px;
 }
