refactor: 重构 issue 页面

--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -5,7 +5,6 @@
 }
 img {
   display: block;
-  width: 100%;
 }
 
 .ant-table-pagination.ant-pagination {
@@ -36,6 +35,17 @@ img {
   }
 }
 
+.ant-pro-sider-menu-sider.light {
+  box-shadow: none !important;
+}
 #logo {
   margin-top: 16px;
+  & > a {
+    justify-content: center;
+    height: auto;
+
+    h1 {
+      text-transform: capitalize;
+    }
+  }
 }
