feat(event): event 详情页 新版样式 - title

--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -16,6 +16,8 @@ img {
 }
 
 .ant-card {
+  border-radius: @radius-2 !important;
+  box-shadow: @box-shadow;
   &.ant-card-bordered {
     overflow: hidden;
     border: none;
