--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -1,5 +1,4 @@
 // base colors
-@primary-color: #ff6f61;
 @light-color: #f6f8fc;
 @white: #fff;
 @black: #000;
@@ -11,15 +10,18 @@
 @text-color-inverse: @white;
 
 // shadow
-@shadow-color: fade(@black, 6%);
+@shadow-color: fade(@black, 4%);
 @shadow-color-2: fade(@black, 30%);
-@box-shadow: 0 2px 8px @shadow-color;
+@box-shadow: 0 2px 6px @shadow-color;
 @box-shadow-2: 2px 0 6px @shadow-color-2;
 
 // space
 @space: 12px;
 @space-2: 24px;
 @space-3: 36px;
+
+@radius: 1px;
+@radius-2: 16px;
 
 // transition
 @transition: all 0.3s ease;
