feat(event): 初步完成 event 详情页的样式

--- a/src/pages/Event/components/ProgressCard/ProgressCard.less
+++ b/src/pages/Event/components/ProgressCard/ProgressCard.less
@@ -15,6 +15,9 @@
   width: @card-width;
   min-width: @card-width;
   height: @card-height;
+  &:not(:last-child) {
+    margin-right: @space;
+  }
 
   .container {
     width: @card-width;
