refactor: 优化登录页逻辑与样式

--- a/src/pages/LogIn/LogIn.less
+++ b/src/pages/LogIn/LogIn.less
@@ -3,4 +3,16 @@
 .root {
   text-align: center;
   .flex-center();
+
+  .container {
+    max-width: 350px;
+
+    .loginBox {
+      & > * {
+        &:not(:last-child) {
+          margin-bottom: @space;
+        }
+      }
+    }
+  }
 }
