--- a/src/components/UserBlock/UserBlock.less
+++ b/src/components/UserBlock/UserBlock.less
@@ -1,6 +1,12 @@
 @import '~@/styles/theme.less';
 
-.inner,
+.root {
+  cursor: pointer;
+  .user {
+    padding: 0;
+  }
+}
+
 .user {
   height: 100%;
   padding: 10px 12px 12px;
@@ -13,13 +19,5 @@
     flex-direction: column;
     padding-left: @space;
     line-height: 20px;
-  }
-}
-.inner {
-  min-width: 68px;
-  cursor: pointer;
-  transition: @transition;
-  &:hover {
-    background-color: @light-color;
   }
 }
