--- a/src/components/menuRender/menuRender.less
+++ b/src/components/menuRender/menuRender.less
@@ -6,26 +6,42 @@
   left: 0;
   z-index: 10;
   height: 100%;
-  overflow: auto;
-
-  .logo {
-    height: 64px;
-    .flex-center();
-
-    .title {
-      margin-left: @space;
-      color: @primary-color;
-      font-weight: 600;
-      font-size: 18px;
+  box-shadow: @box-shadow;
+  :global {
+    .ant-layout-sider-children {
+      flex-direction: column;
+      .flex-between();
     }
   }
 
-  .menu {
-    border: none;
+  .top {
+    width: 100%;
+    .userBlock {
+      padding: @space-2;
+    }
+
+    .menu {
+      border: none;
+    }
   }
 
-  .userBlock {
-    position: absolute;
-    bottom: 200px;
+  .bottom {
+    width: 100%;
+    .trigger {
+      width: 100%;
+      height: 48px;
+      padding: 0;
+      color: @text-color;
+      line-height: 48px;
+      text-align: center;
+      background-color: @white;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      transition: @transition;
+      &:hover {
+        color: @primary-color;
+      }
+    }
   }
 }
