--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -38,6 +38,17 @@ img {
   .ant-menu-item:first-child {
     margin-top: 0;
   }
+  .ant-menu-item-selected::after {
+    right: auto;
+    left: 0;
+    transform: scaleY(1);
+    opacity: 1;
+    transition: transform 0.15s cubic-bezier(0.645, 0.045, 0.355, 1),
+      opacity 0.15s cubic-bezier(0.645, 0.045, 0.355, 1);
+  }
+}
+.ant-page-header {
+  padding: @space-2 !important;
 }
 
 #logo {
