--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -50,6 +50,10 @@ img {
 .ant-page-header {
   padding: @space-2 !important;
 }
+.ant-form-item-explain,
+.ant-form-item-extra {
+  margin: 0;
+}
 
 #logo {
   margin-top: 16px;
