--- a/src/components/MobileLoginForm/MobileLoginForm.less
+++ b/src/components/MobileLoginForm/MobileLoginForm.less
@@ -1,7 +1,8 @@
 @import '~@/styles/theme.less';
 
 .root {
-  min-width: 350px;
+  min-width: 280px;
+  max-width: 350px;
 
   .inputPrefixIcon {
     color: rgba(0, 0, 0, 0.25);
