--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -2,6 +2,7 @@
 @light-color: #f6f8fc;
 @white: #fff;
 @black: #000;
+@secondary-color: #fdc8c4;
 
 // text
 @text-color: fade(@black, 65%);
@@ -14,6 +15,7 @@
 @shadow-color-2: fade(@black, 30%);
 @box-shadow: 0 2px 6px @shadow-color;
 @box-shadow-2: 2px 0 6px @shadow-color-2;
+@box-shadow-3: 0px 10px 45px 4px @shadow-color;
 
 // space
 @space: 12px;
