fix: 更改 menu 相关，适配 iconfont

--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -56,13 +56,6 @@ img {
 }
 
 #logo {
-  margin-top: 16px;
-  & > a {
-    justify-content: center;
-    height: auto;
-
-    h1 {
-      text-transform: capitalize;
-    }
-  }
+  margin-top: @space-2;
+  margin-bottom: 8px;
 }
