refactor(create-organization): 重构创建团队页面

--- a/src/pages/CreateOrganization/CreateOrganization.less
+++ b/src/pages/CreateOrganization/CreateOrganization.less
@@ -1,7 +1,7 @@
-.root {
-  // width: 560px;
+@import '~@/styles/theme.less';
 
-  .submit {
-    float: right;
+.root {
+  .form {
+    .form-width();
   }
 }
