--- a/src/components/MobileLoginForm/MobileLoginForm.less
+++ b/src/components/MobileLoginForm/MobileLoginForm.less
@@ -1,8 +1,7 @@
 @import '~@/styles/theme.less';
 
 .root {
-  min-width: 280px;
-  max-width: 350px;
+  .form-width();
 
   .inputPrefixIcon {
     color: rgba(0, 0, 0, 0.25);
