--- a/src/components/LoginTemplate/LoginTemplate.less
+++ b/src/components/LoginTemplate/LoginTemplate.less
@@ -4,7 +4,7 @@
   text-align: center;
   background-image: url('~@/static/images/login_background.png');
   background-repeat: repeat;
-  background-size: 30%;
+  background-size: 12%;
   .flex-center();
 
   .container {
@@ -29,7 +29,7 @@
       }
     }
     .left {
-      background-color: fade(@secondary-color, 10%);
+      background-color: rgba(253, 222, 196, 0.1);
     }
     .right {
       box-shadow: @box-shadow;
