refactor(issue): 完成 issue 页的样式重构

--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -2,14 +2,12 @@
 
 #root {
   min-height: 100%;
+  background-color: @layout-body-background;
 }
 img {
   display: block;
 }
 
-.ant-table-pagination.ant-pagination {
-  padding: 0 24px;
-}
 .ant-divider.ant-divider-horizontal {
   margin: 12px 0 8px;
 }
@@ -53,6 +51,9 @@ img {
 .ant-form-item-explain,
 .ant-form-item-extra {
   margin: 0;
+}
+.ant-space {
+  display: flex !important;
 }
 
 #logo {
