--- a/src/pages/Event/components/HoverCard/HoverCard.less
+++ b/src/pages/Event/components/HoverCard/HoverCard.less
@@ -7,9 +7,12 @@
     }
   }
 
-  position: relative;
+  padding: @space-2;
   overflow: visible;
-  background-color: @primary-color;
+  background-color: @white;
+  border-radius: @radius-2;
+  cursor: default;
+  .hoverAnimation();
 
   &::before {
     position: absolute;
@@ -24,22 +27,10 @@
     content: '';
   }
 
-  .container {
-    width: 100%;
-    padding: @space-2;
-    background-color: @white;
-    border-radius: @radius-2;
-    cursor: default;
-    transition: @transition;
-  }
-
   &:hover {
     &::before {
       top: 20%;
       height: 60%;
-    }
-    .container {
-      width: calc(100% - 30px);
     }
   }
 }
