--- a/src/components/LoginTemplate/LoginTemplate.less
+++ b/src/components/LoginTemplate/LoginTemplate.less
@@ -1,6 +1,7 @@
 @import '~@/styles/theme.less';
 
 .root {
+  height: 100vh;
   text-align: center;
   background-image: url('~@/static/images/login_background.png');
   background-repeat: repeat;
