--- a/src/pages/OrganizationProject/OrganizationProject.less
+++ b/src/pages/OrganizationProject/OrganizationProject.less
@@ -1,3 +1,11 @@
+@import '~@/styles/theme.less';
+
+.title {
+  & > * {
+    margin-right: @space;
+  }
+}
+
 .root {
   min-height: 80vh !important;
   max-height: 80vh;
