--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -21,7 +21,8 @@ img {
   & > .ant-card-head {
     min-height: 40px;
     border-bottom: none;
-    .ant-card-head-title {
+    .ant-card-head-title,
+    .ant-card-extra {
       padding-bottom: 0;
     }
   }
