feat(organization-project): organization-project 页面支持切换团队

--- a/src/components/Tree/Tree.less
+++ b/src/components/Tree/Tree.less
@@ -26,4 +26,11 @@
   .node {
     .treeNode();
   }
+
+  .empty {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
