--- a/src/pages/OrganizationProject/components/OrganizationTree/OrganizationTree.less
+++ b/src/pages/OrganizationProject/components/OrganizationTree/OrganizationTree.less
@@ -12,6 +12,9 @@
         flex-direction: column;
         font-size: 14px;
         .flex();
+        .title {
+          cursor: pointer;
+        }
       }
     }
     .extra {
