feat(settings): 完成包括头像上传在内的团队信息设置

--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -56,6 +56,9 @@ img {
 .ant-space {
   display: flex !important;
 }
+.ant-upload.ant-upload-select {
+  position: relative;
+}
 
 #logo {
   margin-top: @space-2;
