--- a/src/pages/Settings/components/Profile/Profile.less
+++ b/src/pages/Settings/components/Profile/Profile.less
@@ -1,6 +1,8 @@
 @import '~@/styles/theme.less';
 
 .root {
+  max-width: 960px;
+
   .formItem {
     max-width: 440px;
   }
@@ -15,5 +17,19 @@
     color: @white;
     font-size: 24px !important;
     cursor: pointer;
+  }
+
+  .dangerList {
+    padding: 0 @space;
+  }
+  :global {
+    .ant-modal-body {
+      padding: 0;
+    }
+  }
+  .deleteModal {
+    .container {
+      padding: @space-2;
+    }
   }
 }
