feat(settings): 加入项目列表的展示

--- a/src/components/Zone/Zone.less
+++ b/src/components/Zone/Zone.less
@@ -8,6 +8,7 @@
     font-weight: 400;
     font-size: 24px;
     border-bottom: 1px solid @light-color;
+    .flex-between();
     &.danger {
       margin: 0;
       color: @error-color;
