--- a/src/components/IconButton/IconButton.less
+++ b/src/components/IconButton/IconButton.less
@@ -33,10 +33,17 @@
     background-color: fade(@primary-color, 5%);
     & > span {
       color: @primary-color;
-      animation: rotate 1.5s linear infinite;
     }
   }
   &:active {
     background-color: fade(@primary-color, 20%);
+  }
+
+  &.spin {
+    &:hover {
+      & > span {
+        animation: rotate 1.5s linear infinite;
+      }
+    }
   }
 }
