--- a/src/pages/Settings/Settings.less
+++ b/src/pages/Settings/Settings.less
@@ -1,5 +1,10 @@
 @import '~@/styles/theme.less';
 
+.header {
+  padding-top: @space-2;
+  padding-left: @space-2;
+}
+
 .root {
   :global {
     .ant-card-body {
