--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -62,6 +62,9 @@ label {
 .ant-upload.ant-upload-select {
   position: relative;
 }
+.ant-table-thead > tr > th {
+  font-weight: 600 !important;
+}
 
 #logo {
   margin-top: @space-2;
