feat(setting): 完成 notification setting 的更新 删除等功能

--- a/src/pages/Settings/Project/Notification/Setting/Setting.less
+++ b/src/pages/Settings/Project/Notification/Setting/Setting.less
@@ -1,5 +1,10 @@
 @import '~@/styles/theme.less';
 
 .root {
-  background-color: white;
+  .editButton {
+    color: @info-color;
+  }
+  .deleteButton {
+    color: @error-color;
+  }
 }
