--- a/src/components/IconButton/IconButton.less
+++ b/src/components/IconButton/IconButton.less
@@ -17,25 +17,38 @@
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  background-color: fade(@primary-color, 10%);
   border: none;
   border-radius: 50%;
   outline: none;
   cursor: pointer;
   transition: @transition;
   & > span {
-    color: fade(@primary-color, 80%);
     font-size: 18px !important;
+    transition: @transition;
   }
 
-  &:hover {
-    background-color: fade(@primary-color, 5%);
-    & > span {
-      color: @primary-color;
+  &.defaultType {
+    background: none;
+    &:hover {
+      & > span {
+        color: fade(@text-color, 60%);
+      }
     }
   }
-  &:active {
-    background-color: fade(@primary-color, 20%);
+  &.primaryType {
+    background-color: fade(@primary-color, 10%);
+    & > span {
+      color: fade(@primary-color, 80%);
+    }
+    &:hover {
+      background-color: fade(@primary-color, 5%);
+      & > span {
+        color: @primary-color;
+      }
+    }
+    &:active {
+      background-color: fade(@primary-color, 20%);
+    }
   }
 
   &.spin {
