--- a/src/components/business/SwitchOrganization/SwitchOrganization.less
+++ b/src/components/business/SwitchOrganization/SwitchOrganization.less
@@ -2,15 +2,18 @@
 
 .root {
   .flex();
-
-  .content {
+  .avatar {
+    cursor: pointer;
+    &.collapsed {
+      margin: 0 auto;
+    }
+  }
+  .info {
     flex-direction: column;
     justify-content: center;
     margin-left: @space;
     font-size: 14px;
+    cursor: pointer;
     .flex();
-    .title {
-      cursor: pointer;
-    }
   }
 }
