--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -1,6 +1,7 @@
 @import './theme.less';
 
 #root {
+  height: 100%;
   min-height: 100%;
   background-color: @layout-body-background;
 }
@@ -11,6 +12,9 @@ label {
   font-weight: 600;
 }
 
+.ant-layout {
+  padding: 0 !important;
+}
 .ant-divider.ant-divider-horizontal {
   margin: 12px 0 8px;
 }
@@ -64,9 +68,4 @@ label {
 }
 .ant-table-thead > tr > th {
   font-weight: 600 !important;
-}
-
-#logo {
-  margin-top: @space-2;
-  margin-bottom: 8px;
 }
