--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -12,9 +12,6 @@ label {
   font-weight: 600;
 }
 
-.ant-layout {
-  padding: 0 !important;
-}
 .ant-divider.ant-divider-horizontal {
   margin: 12px 0 8px;
 }
@@ -52,6 +49,9 @@ label {
     transition: transform 0.15s cubic-bezier(0.645, 0.045, 0.355, 1),
       opacity 0.15s cubic-bezier(0.645, 0.045, 0.355, 1);
   }
+}
+.ant-menu-inline-collapsed > .ant-menu-item {
+  padding: 0 16px !important;
 }
 .ant-page-header {
   padding: @space-2 !important;
