--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -1,7 +1,7 @@
 // base colors
 @light-color: #f6f8fc;
 @white: #fff;
-@black: #000;
+@black: #333;
 @secondary-color: #fdc8c4;
 
 // text
@@ -11,10 +11,10 @@
 @text-color-inverse: @white;
 
 // shadow
-@shadow-color: fade(@black, 4%);
-@shadow-color-2: fade(@black, 30%);
+@shadow-color: fade(@black, 6%);
+@shadow-color-2: fade(@black, 40%);
 @box-shadow: 0 2px 6px @shadow-color;
-@box-shadow-2: 2px 0 6px @shadow-color-2;
+@box-shadow-2: 0px 2px 6px @shadow-color-2;
 @box-shadow-3: 0px 10px 45px 4px @shadow-color;
 
 // space
