feat: 完成 sourceMap 的查看 删除功能

--- a/src/pages/Event/components/Detail/Detail.less
+++ b/src/pages/Event/components/Detail/Detail.less
@@ -9,6 +9,12 @@
     max-height: 400px;
     overflow: auto;
 
+    :global {
+      .ant-timeline-item {
+        line-height: 1.8;
+      }
+    }
+
     .action {
       .flex-between();
 
