--- a/src/pages/Event/components/StackInfo/StackInfo.less
+++ b/src/pages/Event/components/StackInfo/StackInfo.less
@@ -5,19 +5,54 @@
     margin-top: @space;
     white-space: pre-wrap;
     word-wrap: break-word;
-    .line {
-      &.highlight {
-        background-color: @primary-color;
-        & > .code {
-          color: @white;
+
+    .collapse {
+      background: none;
+      :global {
+        .ant-collapse-header {
+          padding: 4px @space-2;
+          background: fade(@light-color, 60%);
+          &:hover {
+            background: @light-color;
+          }
+        }
+        .ant-collapse-item {
+          border: none;
+        }
+        .ant-collapse-content-box {
+          padding: 0;
         }
       }
-      .number {
-        color: @text-color-secondary;
+      .title {
+        .strong {
+          font-weight: 600;
+        }
+        & > span {
+          margin: 0 4px;
+          opacity: 0.6;
+        }
       }
-      .code {
-        padding-left: @space;
-        color: @text-color;
+
+      .codes {
+        margin: 0;
+        padding: 8px 0;
+        list-style-position: inside;
+
+        .line {
+          padding-left: @space-2;
+          line-height: @space-2;
+          &.highlight {
+            color: @white;
+            background-color: @primary-color;
+            & > .code {
+              color: @white;
+            }
+          }
+          .code {
+            padding-left: @space-2;
+            color: @text-color;
+          }
+        }
       }
     }
   }
