--- a/src/components/others/footerRender/footerRender.less
+++ b/src/components/others/footerRender/footerRender.less
@@ -1,15 +1,35 @@
 @import '~@/styles/theme.less';
 
 .root {
-  .logo {
-    height: 64px;
-    .flex-center();
+  .container {
+    padding: 20px 16px;
+    overflow: hidden;
 
-    .title {
-      margin-left: @space;
-      color: @primary-color;
-      font-weight: 600;
-      font-size: 18px;
+    .logo {
+      position: absolute;
+      left: 50%;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      transform: translateX(-50%);
+
+      .title {
+        margin-left: @space;
+        color: @primary-color;
+        font-weight: 600;
+        font-size: 18px;
+      }
+    }
+
+    .right {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      float: right;
+      .link {
+        font-weight: 500;
+        font-size: 16px;
+      }
     }
   }
 }
