--- a/src/layouts/Basic/Basic.less
+++ b/src/layouts/Basic/Basic.less
@@ -1,7 +1,7 @@
 @import '~@/styles/theme.less';
 
 .root {
-  min-height: calc(100vh - 85px);
+  min-height: calc(100vh - 93px - 60px);
   .container {
     position: relative;
 
